--- a/Ex6/index.html
+++ b/Ex6/index.html
@@ -7,15 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="demo" style="color: blue;"></h1>
-
-    <script>
-    var myVar = setInterval("CapNhat();", 1000);
-    
-    function CapNhat() {
-      var d = new Date();
-      document.getElementById("demo").innerText = d.toLocaleTimeString();
-    }
-    </script>
+    <a href="https://gokisoft.com">gokisoft</a>
+    <a href="https://ziczacgroup.com ">ziczacgroup</a>
+    <a href="https://thietkewebsitenhe.com.">thietkewebsitenhe</a>
 </body>
 </html>
